# neo_refined

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI_QUICK_REFERENCE.txt  INSTALLATION.md  LICENSE  Makefile  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  backend_server.py  complete_insulation_checklist.tex  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: __init__.py  neo_config.yaml  settings.py
docs/: DEVELOPMENT.md  GEMINI_GUIDE.md  GEMINI_INTEGRATION_SUMMARY.md  USER_GUIDE.md
neo-gui/: README.md  package-lock.json  package.json
neo-gui/app/: page.tsx
neo-gui/app/api/neo/: route.ts
neo-gui/components/: ChatMessage.tsx  CommandInput.tsx  Header.tsx  Sidebar.tsx
scripts/: demo_gemini.py  install.sh  run.sh  setup_gemini.sh  test.sh  test_gemini.py
src/: __init__.py  main.py
src/core/: __init__.py  ai_engine.py  gemini_integration.py
src/modules/: __init__.py  coding_assistant.py  cybersecurity.py  nlp_conversation.py  research.py  system_control.py  task_automation.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  test_ai_engine.py  test_integration.py  test_modules.py
